added Helpers dir and created LoanHelper class. Updated App View UI

--- a/MortgageCalcMVC/Views/Home/App.cshtml
+++ b/MortgageCalcMVC/Views/Home/App.cshtml
@@ -1,6 +1,6 @@
 @{
-    ViewData["Title"] = "App";
+    ViewData["Title"] = "Loan Calculator";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Welcome to the loan calc app.</p>
+<p>Welcome to the Loan Calculator App. Please submit your loan principal amount, loan term, and interest rate to see your monthly payment and amoritization table.</p>
