--- a/MortgageCalcMVC/Views/Home/App.cshtml
+++ b/MortgageCalcMVC/Views/Home/App.cshtml
@@ -7,7 +7,9 @@
     <div class="row">
         <h1 class="appTitle">SoCal Home Buyer</h1>
         <h2 class="lead appTitle fst-italic">A Loan Calculator</h2>
-        <div class="col formBackground rounded">
+
+        <form asp-controller="Home" asp-action="App" method="post">
+            <div class="col formBackground rounded>
             <div class="form-group">
                 <label for="loanAmount">Loan Amount</label>
                 <input type="number" name="Loan Amount" id="loanAmount"
@@ -29,7 +31,7 @@
                     Calculate
                 </button>
             </div>
-        </div>
+        </form> 
 
         <div class="col">
             <div class="d-flex justify-content-center">
@@ -40,22 +42,23 @@
     </div>
     <div class="row mt-3">
         <div class="col">
-            <table class="table table-striped" id="amoritizationSchedule">
-                <thead class="tableHeader">
-                <tr>
-                    <th>Month</th>
-                    <th>Payment</th>
-                    <th>Principal</th>
-                    <th>Interest</th>
-                    <th>Total Interest</th>
-                    <th>Balance</th>
-                </tr>
-                </thead>
-                <tbody id=amoritizationScheduleBody>
-                <!-- data goes here -->
-                </tbody>
-
-            </table>
+            <div class="table-responsive">
+                <table class="table table-striped table-dark table-hover">
+                    <thead>
+                    <tr>
+                        <th>Month</th>
+                        <th>Payment</th>
+                        <th>Principal</th>
+                        <th>Interest</th>
+                        <th>Total Interest</th>
+                        <th>Balance</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <!-- data goes here -->
+                    </tbody>
+                </table>
+            </div>
 
         </div>
     </div>
