--- a/MortgageCalcMVC/Views/Home/App.cshtml
+++ b/MortgageCalcMVC/Views/Home/App.cshtml
@@ -9,27 +9,28 @@
         <h2 class="lead appTitle fst-italic">A Loan Calculator</h2>
 
         <form asp-controller="Home" asp-action="App" method="post">
-            <div class="col formBackground rounded>
-            <div class="form-group">
-                <label for="loanAmount">Loan Amount</label>
-                <input type="number" name="Loan Amount" id="loanAmount"
-                       class="form-control" aria-describedby="Loan Amount">
-            </div>
-            <div class="form-group">
-                <label for="loanTerm">Loan Term <i>(in months)</i></label>
-                <input type="number" name="Loan Term" id="loanTerm" class="form-control"
-                       aria-describedby="Loan Term">
-            </div>
-            <div class="form-group">
-                <label for="interestRate">Interest Rate</label>
-                <input type="number" name="Interest Rate" id="interestRate"
-                       class="form-control" aria-describedby="Interest Rate">
-            </div>
-            <div class="d-flex justify-content-end mt-3 p-3">
-                <button class="button btn btn-outline-info" type="button"
-                        id="btnSubmit">
-                    Calculate
-                </button>
+            <div class="col">
+                <div class="form-group">
+                    <label for="loanAmount">Loan Amount</label>
+                    <input type="number" name="Loan Amount" id="loanAmount"
+                           class="form-control" aria-describedby="Loan Amount">
+                </div>
+                <div class="form-group">
+                    <label for="loanTerm">Loan Term <i>(in months)</i></label>
+                    <input type="number" name="Loan Term" id="loanTerm" class="form-control"
+                           aria-describedby="Loan Term">
+                </div>
+                <div class="form-group">
+                    <label for="interestRate">Interest Rate</label>
+                    <input type="number" name="Interest Rate" id="interestRate"
+                           class="form-control" aria-describedby="Interest Rate">
+                </div>
+                <div class="d-flex justify-content-end mt-3 p-3">
+                    <button class="button btn btn-outline-info" type="button"
+                            id="btnSubmit">
+                        Calculate
+                    </button>
+                </div>
             </div>
         </form> 
 
